--- a/ index.html
+++ b/ index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="css/style.css" type="text/css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
         <title></title>
     </head>
     <body>
-        <header nav>
+        <header class="nav">
             <div inline-block>
                 <div>
                     <img src="img_logo.png" alt="logo" width="80" height="80">
@@ -13,11 +13,11 @@
                 <div>
                     <img src="img_blueorangegradient.jpg" alt="gradientbackground" width="300" height="400">
                 </div>
-            <nav inline-block>
-                <ul>
-                    <li inline-block>about
+            <nav class="inline-block">
+                <ul class="ul">
+                    <li class="li">about
                     </li>
-                    <li inline-block>skills
+                    <li >skills
                     </li>
                     <li inline-block>work
                     </li>
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
             </div>
-        <section hero-img>
+        <section class="hero-img">
             <div content>
                 <img></img>
                 <h1>An aspiring UX designer.Sharpening my craft in both visual and interaction designs.
