updated image file name

--- a/ index.html
+++ b/ index.html
@@ -17,11 +17,11 @@
                 <ul class="ul">
                     <li class="li">about
                     </li>
-                    <li >skills
+                    <li class="li">skills
                     </li>
-                    <li inline-block>work
+                    <li class="li">work
                     </li>
-                    <li inline-block>contact
+                    <li class="li">contact
                     </li>
                 </ul>
             </nav>
@@ -36,15 +36,15 @@
                 <button>browse my work</button>
             </div content>
         </section>
-        <footer>
-            <ul>
-                <li inline-block>about
+        <footer class="footer">
+            <ul class="ul">
+                <li class="li">about
                 </li>
-                <li inline-block>skills
+                <li class="li">skills
                 </li>
-                <li inline-block>work
+                <li class="li">work
                 </li>
-                <li inline-block>contact
+                <li class="li">contact
                 </li>
             </ul>
         </footer>
