--- a/ index.html
+++ b/ index.html
@@ -7,12 +7,7 @@
     <body>
         <header class="nav">
             <div inline-block>
-                <div>
-                    <img src="img_logo.png" alt="logo" width="80" height="80">
-                </div>
-                <div>
-                    <img src="img_blueorangegradient.jpg" alt="gradientbackground" width="300" height="400">
-                </div>
+                <div class="logo"></div>
             <nav class="inline-block">
                 <ul class="ul">
                     <li class="li">about
@@ -26,15 +21,15 @@
                 </ul>
             </nav>
             </div>
-        <section class="hero-img">
-            <div content>
-                <img></img>
+        <section class="hero">
+            <div class="content">
                 <h1>An aspiring UX designer.Sharpening my craft in both visual and interaction designs.
                 </h1>
                 <h2>Currently living in Los Angeles.
                     I enjoy doodling, surfing, and attending concerts.</h2>
                 <button>browse my work</button>
-            </div content>
+                <div class= "hero-img"></div>
+            </div>
         </section>
         <footer class="footer">
             <ul class="ul">
